infra/k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dno-server-depl
  annotations:
    dev.okteto.com/auto-ingress: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dno-server
  template:
    metadata:
      labels:
        app: dno-server
    spec:
      containers:
        - name: dno-server
          image: registry.cloud.okteto.net/nikita-beletskiy/dno-server
---
apiVersion: v1
kind: Service
metadata:
  name: dno-server-srv
spec:
  selector:
    app: dno-server
  ports:
    - name: dno-server
      protocol: TCP
      port: 3000
      targetPort: 3000
