infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: dno-shop-nikita-beletskiy.cloud.okteto.net
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: dno-server-srv
              servicePort: 3000
